task5/tests/hw5-tests/output/t1.out
lli: <stdin>:67:7: error: use of undefined value '%-22066'
br i1 %-22066, label %label_12, label %label_14
      ^

